adjust pom dependency