@@ -123,8 +123,8 @@
         <knife4j.version>2.0.9</knife4j.version>
         <maven.version>3.3.3</maven.version>
         <xstream.core.version>1.4.19</xstream.core.version>
-        <spring.version>5.2.15.RELEASE</spring.version>
-        <spring.security.cryto.version>5.4.4</spring.security.cryto.version>
+<!--        <spring.version>5.2.15.RELEASE</spring.version>-->
+<!--        <spring.security.cryto.version>5.4.4</spring.security.cryto.version>-->
         <reflections.version>0.9.10</reflections.version>
         <mybatis-plus.boot.starter.version>3.4.1</mybatis-plus.boot.starter.version>
         <mysql.connector.version>5.1.49</mysql.connector.version>
@@ -649,6 +649,17 @@
                         </execution>
                     </executions>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <forkCount>3</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
+
             </plugins>
         </pluginManagement>
     </build>
